--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,5 @@
 <ion-view title="Map">
-<div class="floatingButton"><button type="button" id="pickupshift" class="button button-large button-block button-positive" ui-sref="app.tab.pickup">Pick up shift</button>
+<div class="floatingButton"><div id="loading">Please wait while we load your location...</div><button type="button" id="pickupshift" class="button button-large button-block button-positive" ng-click="pickup()">Pick up shift</button>
 <button id="covermyshift" class="button button-large button-block button-positive" ui-sref="app.tab.friends">
     Cover My Shift
   </button>
