one tab/menu bug squashed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -46,7 +46,7 @@
         <ion-item menu-close href="#/app/profile">
           Profile
         </ion-item>
-        <ion-item menu-close href="#/app/settings">
+        <ion-item menu-close ui-sref="app.tab.account">
           Settings
         </ion-item>
         <ion-item menu-close ui-sref="app.tab.map">
