added calendar and timepicker for cover shift

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -46,6 +46,12 @@
         <ion-item menu-close href="#/app/profile">
           Profile
         </ion-item>
+        <ion-item menu-close href="#/app/calendar">
+          Calendar
+        </ion-item>
+        <ion-item menu-close href="#/app/timepicker">
+          Time Picker
+        </ion-item>
         <ion-item menu-close ui-sref="app.tab.account">
           Settings
         </ion-item>
