--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -52,6 +52,9 @@
         <ion-item menu-close href="#/app/timepicker">
           Time Picker
         </ion-item>
+        <ion-item menu-close href="#/app/pickup-list">
+          Pickup List
+        </ion-item>
         <ion-item menu-close ui-sref="app.tab.account">
           Settings
         </ion-item>
