--- a/www/templates/pickup-list.html
+++ b/www/templates/pickup-list.html
@@ -3,7 +3,7 @@
        <ion-list>
 			  <ion-item ng-repeat="shift in availableShifts">
 			    <p>Where: {{shift.store}}<br/>
-			    When: {{shift.date}}, {{shift.start}}-{{shift.end}}<br/>
+			    When: {{shift.start}}-{{shift.end}}<br/>
 			    Posted by: {{shift.postedby}} (contact)<br/>
 			    Prize: {{shift.prize}}</p>
 			  </ion-item>
