pickup shift working

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,8 +11,8 @@
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" ui-sref="app.tab.friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <ion-tab title="Pickup Shift" icon="icon ion-android-sync" ui-sref="app.tab.pickup-list">
+    <ion-nav-view name="tab-pickup-list"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
