--- a/www/templates/pickup-list.html
+++ b/www/templates/pickup-list.html
@@ -6,6 +6,7 @@
 			    When: {{shift.start}}-{{shift.end}}<br/>
 			    Posted by: {{shift.postedby}} (contact)<br/>
 			    Prize: {{shift.prize}}</p>
+			    <button ng-click=callFriend({{shift.postedby}})>Claim this shift</button>
 			  </ion-item>
 			</ion-list>
     </ion-content>
