--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,6 +1,6 @@
 <ion-view title="Map">
 <div class="floatingButton"><div id="loading">Please wait while we load your location...</div><button type="button" id="pickupshift" class="button button-large button-block button-positive" ng-click="pickup()">Pick up shift</button>
-<button id="covermyshift" class="button button-large button-block button-positive" ui-sref="app.tab.friends">
+<button type="button" id="covermyshift" class="button button-large button-block button-positive" ng-click="cover()" ui-sref="app.cover">
     Cover My Shift
   </button>
 
