--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,7 +1,7 @@
 <ion-view title="Friends">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/app/tab/friend/{{friend.id}}">
+      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/app/friend/{{friend.id}}">
         {{friend.name}}
       </ion-item>
     </ion-list>
