refactoring of controlers

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -16,8 +16,8 @@
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon="icon ion-gear-b" ui-sref="app.tab.account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Post a shift" icon="icon ion-gear-b" ui-sref="app.tab.cover">
+    <ion-nav-view name="tab-cover"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
