--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,8 +25,8 @@
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Settings" icon="icon ion-gear-b" ui-sref="app.tab.account">
-    <ion-nav-view name="tab-settings"></ion-nav-view>
+  <ion-tab title="Post a Shift" icon="icon ion-gear-b" ui-sref="app.tab.cover">
+    <ion-nav-view name="tab-cover"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
