added prize to shift cover page

--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -4,11 +4,14 @@
     <p class="calendar-title"> Calendar </p>
     <button class="button button-positive" ng-click="openDatePicker()">Pick a Date</button>
     
-    <p class="time-title"> Time </p>
-    <button class="button button-positive" ng-click="openTimePicker()">Pick a Time</button>
+    <p class="time-title"> Start Time </p>
+    <button class="button button-positive" ng-click="openTimePicker1()">Start Shift Time</button>
+
+    <p class="time-title"> End Time </p>
+    <button class="button button-positive" ng-click="openTimePicker2()">End Shift Time</button>
 
     <p class="time-title"> Prize </p>
-    <button class="button button-positive" ng-click="submitPrize()">Give a Prize</button>
+    <button class="button button-positive" ng-click="prizePicker()">Give a Prize</button>
 
   </ion-content>
 </ion-view>
