shifts are now posting to the database

--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -13,5 +13,8 @@
     <p class="time-title"> Prize </p>
     <button class="button button-positive" ng-click="prizePicker()">Give a Prize</button>
 
+    <p class="time-title"> Post </p>
+    <button class="button button-positive" ng-click="postShift()">Confirm Shift</button>
+
   </ion-content>
 </ion-view>
