partners page html

--- a/www/templates/partner.html
+++ b/www/templates/partner.html
@@ -9,10 +9,7 @@
   	<p class="contact-header"> Phone </p>
   	<p class="contact-info"></p>
   	
-   	<p class="contact-header"> Main Shop </p>
-  	<p class="contact-info"></p>
-
-  	<p class="contact-header"> Secondary Shops </p>
+   	<p class="contact-header"> User Rep </p>
   	<p class="contact-info"></p>
 
   	<button class="button button-positive">Contact</button>
