--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,7 @@
 <ion-view title="Map">
+<div id="notification">You have notification waiting<br/>
+<button type="button" ng-click="cover()"> Accepto! </button>
+</div>
 <div class="floatingButton"><div id="loading">Please wait while we load your location...</div><button type="button" id="pickupshift" class="button button-large button-block button-positive" ng-click="pickup()">Pick up shift</button>
 <button type="button" id="covermyshift" class="button button-large button-block button-positive" ng-click="cover()" ui-sref="app.cover">
     Cover My Shift
