--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -1,16 +1,16 @@
 <ion-view view-title="Pick a Date">
   <ion-content class="padding cover">
 
-    <p class="calendar-title"> Calendar </p>
+    <p class="calendar-title"> {{shiftDate}} </p>
     <button class="button button-positive" ng-click="openDatePicker()">Pick a Date</button>
     
-    <p class="time-title"> Start Time </p>
+    <p class="time-title"> {{startTime}} </p>
     <button class="button button-positive" ng-click="openTimePicker1()">Start Shift Time</button>
 
-    <p class="time-title"> End Time </p>
+    <p class="time-title"> {{endTime}} </p>
     <button class="button button-positive" ng-click="openTimePicker2()">End Shift Time</button>
 
-    <p class="time-title"> Prize </p>
+    <p class="time-title"> {{shiftData.prize}} </p>
     <button class="button button-positive" ng-click="prizePicker()">Give a Prize</button>
 
     <p class="time-title"> Post </p>
