--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -46,19 +46,13 @@
         <ion-item menu-close href="#/app/profile">
           Profile
         </ion-item>
-        <ion-item menu-close href="#/app/calendar">
-          Calendar
-        </ion-item>
-        <ion-item menu-close href="#/app/timepicker">
-          Time Picker
-        </ion-item>
         <ion-item menu-close href="#/app/partner">
           Shift Partner
         </ion-item>
         <ion-item menu-close ui-sref="app.tab.account">
           Settings
         </ion-item>
-        <ion-item menu-close ui-sref="app.tab.map">
+        <ion-item menu-close ng-click="logout()">
           Log Out
         </ion-item>
       </ion-list>
