--- a/www/templates/pickup-list.html
+++ b/www/templates/pickup-list.html
@@ -1,5 +1,9 @@
 <ion-view title="Pickup a shift">
     <ion-content>
+        <ion-refresher 
+		  pulling-text="Pull to refresh..."
+		  on-refresh="doRefresh2()">
+		</ion-refresher>
        <ion-list>
 			  <ion-item ng-repeat="shift in availableShifts">
 			    <p>Where: {{shift.store}}<br/>
