basic shift approval functionality added

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,5 @@
 <ion-view title="Map">
-<div id="notification">You have notification waiting<br/>
+<div id="notification"><p id="noticeMsg">You have notification waiting</p>
 <button type="button" ng-click="cover()"> Accepto! </button>
 </div>
 <div class="floatingButton"><div id="loading">Please wait while we load your location...</div><button type="button" id="pickupshift" class="button button-large button-block button-positive" ng-click="pickup()">Pick up shift</button>
