--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -28,7 +28,7 @@
    </div>
 
    <div class="item item-divider">
-     Shift Date
+     Prize
    </div>
    <div class="item item-text-wrap" ng-click="prizePicker()">
      <i class="icon ion-cash"></i>
