added fake functionality for aproving shift

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,6 +1,7 @@
 <ion-view title="Map">
 <div id="notification"><p id="noticeMsg">You have notification waiting</p>
 <button id="accepto" type="button" href="#/app/cover"> Accepto! </button>
+<button id="accepto2" type="button" onclick="aprove()"> Aprove </button>
 </div>
 <div class="floatingButton"><div id="loading">Please wait while we load your location...</div><button type="button" id="pickupshift" class="button button-large button-block button-positive" ng-click="pickup()">Pick up shift</button>
 <button type="button" id="covermyshift" class="button button-large button-block button-positive" ui-sref="app.tab.cover">
