Populating profile page from DB

--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -11,8 +11,13 @@
       <div class="list">
 
         <label class="item item-input">
-          <span class="input-label">Name</span>
-          <input type="text" name="name" ng-model="profileData.name">
+          <span class="input-label">First Name</span>
+          <input type="text" name="name" ng-model="profileData.firstName">
+        </label>
+
+        <label class="item item-input">
+          <span class="input-label">Last Name</span>
+          <input type="text" name="name" ng-model="profileData.lastName">
         </label>
 
         <label class="item item-input">
@@ -26,13 +31,8 @@
         </label>
 
         <label class="item item-input">
-          <span class="input-label">Main Shop</span>
-          <input type="text" name="mainshop" ng-model="profileData.mainshop">
-        </label>
-
-        <label class="item item-input">
-          <span class="input-label">Secondary Shops</span>
-          <input type="text" name="secondary" ng-model="profileData.secondary">
+          <span class="input-label">Home Store</span>
+          <input type="text" name="mainshop" ng-model="profileData.home_store">
         </label>
 
         <label class="item">
