--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,7 +1,10 @@
 <ion-view view-title="Profile">
   <ion-content class="padding">
+
+    <img ng-src="{{profileData.profilePicture}}" alt="good looking dude" />
+
   	<p class="profile-header"> Name </p>
-  	<p class="profile-info">{{ profileData.name }}</p>
+  	<p class="profile-info">{{ profileData.firstName + " " + profileData.lastName }}</p>
   	
   	<p class="profile-header"> Email </p>
   	<p class="profile-info">{{ profileData.email }}</p>
@@ -9,8 +12,8 @@
   	<p class="profile-header"> Phone </p>
   	<p class="profile-info">{{ profileData.phone }}</p>
   	
-   	<p class="profile-header"> Main Shop </p>
-  	<p class="profile-info">{{ profileData.mainshop }}</p>
+   	<p class="profile-header"> Home Store</p>
+  	<p class="profile-info">{{ profileData.home_store }}</p>
 
 
   	<button class="button button-positive" ng-click="openEditProfile()">Edit Profile</button>
