Adds functionality for the user to approve shifts

--- a/www/templates/partner.html
+++ b/www/templates/partner.html
@@ -14,7 +14,7 @@
   	<p class="contact-info">{{partnerInfo.userRep}}</p>
 
   	<button class="button button-positive">Contact</button>
-    <button class="button button-positive">Accept</button>
+    <button type="button" class="button button-positive" ng-click="approve()">Accept</button>
     <button class="button button-positive">Reject</button>
   </ion-content>
 </ion-view>
