user can set a home store now

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -13,7 +13,7 @@
   	<p class="profile-info">{{ profileData.phone }}</p>
   	
    	<p class="profile-header"> Home Store</p>
-  	<p class="profile-info">{{ profileData.home_store }}</p>
+    <p class="profile-info">{{ profileData.home_store.address }}</p>
 
 
   	<button class="button button-positive" ng-click="openEditProfile()">Edit Profile</button>
