--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -20,5 +20,10 @@
     <ion-nav-view name="tab-cover"></ion-nav-view>
   </ion-tab>
 
+  <!-- My Shifts Tab -->
+  <ion-tab title="My Shifts" icon="icon ion-gear-b" ui-sref="app.tab.myshifts">
+    <ion-nav-view name="tab-myshifts"></ion-nav-view>
+  </ion-tab>
+
 </ion-tabs>
 
