--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -7,40 +7,33 @@
   </ion-header-bar>
   <ion-content>
 
-    <form ng-submit="">
       <div class="list">
 
         <label class="item item-input">
           <span class="input-label">First Name</span>
-          <input type="text" name="name" ng-model="profileData.firstName">
+          <input type="text" name="name" ng-model="editProfileTempData.firstName">
         </label>
 
         <label class="item item-input">
           <span class="input-label">Last Name</span>
-          <input type="text" name="name" ng-model="profileData.lastName">
+          <input type="text" name="name" ng-model="editProfileTempData.lastName">
         </label>
 
         <label class="item item-input">
           <span class="input-label">Email</span>
-          <input type="email" name="email" ng-model="profileData.email">
+          <input type="email" name="email" ng-model="editProfileTempData.email">
         </label>
 
         <label class="item item-input">
           <span class="input-label">Phone</span>
-          <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" name="phone" ng-model="profileData.phone">
-        </label>
-
-        <label class="item item-input">
-          <span class="input-label">Home Store</span>
-          <input type="text" name="mainshop" ng-model="profileData.home_store">
+          <input type="tel" name="phone" ng-model="editProfileTempData.phone">
         </label>
 
         <label class="item">
           <button class="button button-block button-positive" type="submit" ng-click="submitProfile()">Save Changes</button>
         </label>
-
+        
       </div>
-    </form>
 
   </ion-content>
 </ion-modal-view>
